--- a/package.json
+++ b/package.json
@@ -44,14 +44,15 @@
     "**/*.{js,ts}": "npm run lint:fix"
   },
   "dependencies": {
-    "express": "^4.19.2",
     "@asteasolutions/zod-to-openapi": "^7.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "envalid": "^8.0.0",
+    "express": "^4.19.2",
     "express-rate-limit": "^7.2.0",
     "helmet": "^7.1.0",
     "http-status-codes": "^2.3.0",
+    "pino": "^8.20.0",
     "pino-http": "^9.0.0",
     "swagger-ui-express": "^5.0.0",
     "zod": "^3.22.4"
