--- a/.env.template
+++ b/.env.template
@@ -12,3 +12,6 @@ COMMON_RATE_LIMIT_MAX_REQUESTS="20" # Max number of requests per window per IP
 
 #Database
 MONGO_URI=mongodb://localhost:27017/test
+
+JWT_SECRET_KEY='1234'
+JWT_EXPIRE='1h'
