--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-simple-import-sort": "^12.1.0",
-    "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
     "pino-pretty": "^11.0.0",
     "prettier": "^3.2.5",
@@ -64,5 +63,8 @@
     "pino-http": "^9.0.0",
     "swagger-ui-express": "^5.0.0",
     "zod": "^3.22.4"
+  },
+  "optionalDependencies": {
+    "husky": "^9.0.11"
   }
 }
